- Enchance Library: add all actions to + with a popup, implemented update of books and add the edit action on cards - Implemented advanced search: add dedicated fields and unify search with search/advance - Add the Add/Delete toggle on cards of books not in library (to be fixed, id issues) - Replace confirm() with a custom modal - Fix of several bugs/issues:     - Fix empty responses to fetchs not handled     - Fix books not filtered even if in libreria     - Sidebar height not fixed     - Make actual view mode clear     - Fix shape and size of bottons in book cards     - Missing values in book field are showed as default strings now     - Cropped the title if too long in Search page for don't create a too large tupla

--- a/client/style.css
+++ b/client/style.css
@@ -28,6 +28,24 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+/* Sidebar */
+aside {
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    overflow-y: auto;
+}
+
+/* View Toggle Styles */
+.view-btn-active {
+    /* gray-700 */
+    background-color: #374151 !important;
+    /* indigo-400 */
+    color: #818cf8 !important;
+    /* indigo-600 */
+    border: 1px solid #4f46e5 !important;
+}
+
 /* Animations */
 @keyframes fadeIn {
     from {
